[package]
name = "treefmt"
version = "0.1.1"
authors = [
  "Andika Demas Riyandi <andika.riyan@gmail.com>",
  "Basile Henry <bjm.henry@gmail.com>",
  "Jonas Chevalier <zimbatm@zimbatm.com>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0"
console = "0.13"
directories = "3.0.1"
filetime = "0.2"
globset = "0.4.6"
ignore = "0.4.17"
log = "0.4"
path-clean = "0.1.0"
rayon = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha-1 = "0.9.2"
structopt = "0.3"
tempfile = "3.2.0"
toml = "0.5"
which = "4.0.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false
